force-app/main/default/objects/SAC_Genial_Resultado__c/SAC_Genial_Resultado__c.object-meta.xml
<CustomObject>
    <description>Estructura de datos para poder validar los datos propuestos por la IA para actualizar el Caso</description>
    <label>SAC_Genial_Resultado</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>SAC_Genial_Resultado Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAC_Genial_Resultados</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>