force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_AccountId_OK__c.field-meta.xml
<CustomField>
    <fullName>SAC_AccountId_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>comprobación de si el reclamante principal es correcto</description>
    <label>AccountId OK</label>
    <type>Checkbox</type>
</CustomField>