force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_AciertoDatosExp__c.field-meta.xml
<CustomField>
    <fullName>SAC_AciertoDatosExp__c</fullName>
    <formula>(IF(SAC_Idioma_OK__c, 1, 0) + IF(SAC_Importe_Reclamado_OK__c, 1, 0) + IF(SAC_Importe_Tipo_OK__c , 1, 0) + IF(SAC_Naturaleza_OK__c , 1, 0) + IF(SAC_Representante_Legal_OK__c, 1, 0))/5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Acierto Datos Expediente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>