force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_CodigoPostalContacto__c.field-meta.xml
<CustomField>
    <fullName>SAC_CodigoPostalContacto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Código postal reclamante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>