force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_CodigoPostalRepresentante__c.field-meta.xml
<CustomField>
    <fullName>SAC_CodigoPostalRepresentante__c</fullName>
    <description>Código postal del representante proporcionado por la IA</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Código postal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>