force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_DespachoRepresentante__c.field-meta.xml
<CustomField>
    <fullName>SAC_DespachoRepresentante__c</fullName>
    <description>Despacho del representante proporcionado por la IA</description>
    <label>Despacho representante</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAC_AndresMorata</fullName>
                <label>Andrés Morata Semitiel</label>
            </value>
            <value>
                <fullName>SAC_Arriaga</fullName>
                <label>Arriaga Asociados A.J.E.</label>
            </value>
            <value>
                <fullName>SAC_Rosales</fullName>
                <label>Bufete Rosales</label>
            </value>
            <value>
                <fullName>SAC_DanielGonzalez</fullName>
                <label>Daniel González Navarro</label>
            </value>
            <value>
                <fullName>SAC_DespachoPrincipal</fullName>
                <label>Despacho principal</label>
            </value>
            <value>
                <fullName>SAC_Duran</fullName>
                <label>Durán</label>
            </value>
            <value>
                <fullName>SAC_Ezaro</fullName>
                <label>Ezaro Legal</label>
            </value>
            <value>
                <fullName>SAC_Hipotecasos</fullName>
                <label>Hipotecasos</label>
            </value>
            <value>
                <fullName>SAC_Ibarra</fullName>
                <label>Ibarra Finanzas</label>
            </value>
            <value>
                <fullName>SAC_Robinjud</fullName>
                <label>Los Robinjud Servicios Legales, SL</label>
            </value>
            <value>
                <fullName>SAC_Otros</fullName>
                <label>Otros</label>
            </value>
            <value>
                <fullName>SAC_PreicoJuridicos</fullName>
                <label>Preico Jurídicos Abogados</label>
            </value>
            <value>
                <fullName>SAC_Reclamapormi</fullName>
                <label>Reclama Por Mi, SL</label>
            </value>
            <value>
                <fullName>SAC_Reclamaprestamo</fullName>
                <label>Reclama tu préstamo</label>
            </value>
            <value>
                <fullName>SAC_RespuestaJuridica</fullName>
                <label>Respuesta Jurídica</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>