force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_DespachoRepresentante_OK__c.field-meta.xml
<CustomField>
    <fullName>SAC_DespachoRepresentante_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Validador del despacho del representante proporcionado por la IA</description>
    <label>Despacho Represante</label>
    <type>Checkbox</type>
</CustomField>