force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_DireccionPostal__c.field-meta.xml
<CustomField>
    <fullName>SAC_DireccionPostal__c</fullName>
    <description>Dirección postal proporcionada por la IA</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dirección postal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>