force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_DocumentoURL__c.field-meta.xml
<CustomField>
    <fullName>SAC_DocumentoURL__c</fullName>
    <description>URL del documento</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Documento URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>