force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_Email__c.field-meta.xml
<CustomField>
    <fullName>SAC_Email__c</fullName>
    <description>Email del reclamante principal proporcionado por la IA</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Reclamante</label>
    <type>Email</type>
</CustomField>