force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_Email_OK__c.field-meta.xml
<CustomField>
    <fullName>SAC_Email_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Comprobacion del campo email del reclamante situado en el contacto de la reclamacion</description>
    <label>Email OK</label>
    <type>Checkbox</type>
</CustomField>