force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_EmailRepresentante__c.field-meta.xml
<CustomField>
    <fullName>SAC_EmailRepresentante__c</fullName>
    <description>Email del representante proporcionado por la IA</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Correo electrónico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>