force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_EmailRepresentante_OK__c.field-meta.xml
<CustomField>
    <fullName>SAC_EmailRepresentante_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check si el correo del representante es ok</description>
    <label>Correo electrónico OK</label>
    <type>Checkbox</type>
</CustomField>