force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_FechaRecepcion__c.field-meta.xml
<CustomField>
    <fullName>SAC_FechaRecepcion__c</fullName>
    <description>Fecha de recepción de la reclamación. Porporcionado por IA</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha recepción</label>
    <type>DateTime</type>
</CustomField>