force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_FirstName__c.field-meta.xml
<CustomField>
    <fullName>SAC_FirstName__c</fullName>
    <description>Nombre del reclamante</description>
    <encryptionScheme>None</encryptionScheme>
    <label>FirstName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>