force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_Idioma__c.field-meta.xml
<CustomField>
    <fullName>SAC_Idioma__c</fullName>
    <description>Idioma de la reclamación porporcionado por IA</description>
    <label>Idioma</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Codigo_Idioma</valueSetName>
    </valueSet>
</CustomField>