force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_Idioma_OK__c.field-meta.xml
<CustomField>
    <fullName>SAC_Idioma_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check idioma ok</description>
    <label>Idioma OK</label>
    <type>Checkbox</type>
</CustomField>