force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_Importe_Reclamado__c.field-meta.xml
<CustomField>
    <fullName>SAC_Importe_Reclamado__c</fullName>
    <description>Importe reclamado proporcionado por la IA</description>
    <label>Importe reclamado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>