force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_Importe_Tipo__c.field-meta.xml
<CustomField>
    <fullName>SAC_Importe_Tipo__c</fullName>
    <description>Tipo de importe proporcionado por la IA</description>
    <label>Importe - Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sin importe</fullName>
            </value>
            <value>
                <fullName>SIn cuantificar</fullName>
            </value>
            <value>
                <fullName>Importe reclamado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>