force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_JSON__c.field-meta.xml
<CustomField>
    <fullName>SAC_JSON__c</fullName>
    <description>json devuelto por la integración de SAC_GENIAL_WS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>