force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_LastName__c.field-meta.xml
<CustomField>
    <fullName>SAC_LastName__c</fullName>
    <description>Apellidos del reclamante</description>
    <encryptionScheme>None</encryptionScheme>
    <label>LastName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>