force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_MCC_Motivo__c.field-meta.xml
<CustomField>
    <fullName>SAC_MCC_Motivo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Motivo del caso proporcionado por la IA</description>
    <label>Motivo</label>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>SAC_Genial_Resultados (Motivo)</relationshipLabel>
    <relationshipName>SAC_Genial_Resultados3</relationshipName>
    <type>Lookup</type>
</CustomField>