force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_MCC_OK__c.field-meta.xml
<CustomField>
    <fullName>SAC_MCC_OK__c</fullName>
    <description>True si los 4 niveles MCC son correctos</description>
    <formula>AND(SAC_MCC_Tematica_OK__c ,SAC_MCC_ProdServ_OK__c ,  SAC_Detalle_OK__c ,   SAC_MCC_Motivo_OK__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MCC OK</label>
    <type>Checkbox</type>
</CustomField>