force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_MCC_ProdServ__c.field-meta.xml
<CustomField>
    <fullName>SAC_MCC_ProdServ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Producto/servicio proporcionado por la IA</description>
    <label>Producto/Servicio</label>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>SAC_Genial_Resultados (Producto/Servicio)</relationshipLabel>
    <relationshipName>SAC_Genial_Resultados1</relationshipName>
    <type>Lookup</type>
</CustomField>