force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_MCC_ProdServ_OK__c.field-meta.xml
<CustomField>
    <fullName>SAC_MCC_ProdServ_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check  de Producto/Servicio OK</description>
    <label>Producto/Servicio OK</label>
    <type>Checkbox</type>
</CustomField>