force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_MCC_Tematica__c.field-meta.xml
<CustomField>
    <fullName>SAC_MCC_Tematica__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tématica del MCC proporcionado por la IA</description>
    <label>Temática</label>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>SAC_Genial_Resultados</relationshipLabel>
    <relationshipName>SAC_Genial_Resultados</relationshipName>
    <type>Lookup</type>
</CustomField>