force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_Naturaleza__c.field-meta.xml
<CustomField>
    <fullName>SAC_Naturaleza__c</fullName>
    <description>Indica la naturaleza de la reclamación: queja, felicitación, consulta etc. Proporcionado por la IA</description>
    <label>Naturaleza</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAC_001</fullName>
                <label>Queja</label>
            </value>
            <value>
                <fullName>SAC_004</fullName>
                <label>Reclamación</label>
            </value>
            <value>
                <fullName>SAC_005</fullName>
                <label>Consulta</label>
            </value>
            <value>
                <fullName>SAC_006</fullName>
                <label>Incidencia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>