force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_Naturaleza_OK__c.field-meta.xml
<CustomField>
    <fullName>SAC_Naturaleza_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check de naturaleza ok</description>
    <label>Naturaleza OK</label>
    <type>Checkbox</type>
</CustomField>