force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_NombreContacto__c.field-meta.xml
<CustomField>
    <fullName>SAC_NombreContacto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nombre reclamante</label>
    <length>100</length>
    <type>Text</type>
</CustomField>