force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_Numero_Pretensiones_IA__c.field-meta.xml
<CustomField>
    <fullName>SAC_Numero_Pretensiones_IA__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Número de pretensiones propuesto por la IA</description>
    <label>Numero Pretensiones IA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>