force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_Numero_pretensiones_OK__c.field-meta.xml
<CustomField>
    <fullName>SAC_Numero_pretensiones_OK__c</fullName>
    <defaultValue>0</defaultValue>
    <description>se informará con el número de pretensiones diagnosticadas correctamente</description>
    <label>Numero pretensiones OK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>