force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_Numero_total_pretensiones__c.field-meta.xml
<CustomField>
    <fullName>SAC_Numero_total_pretensiones__c</fullName>
    <defaultValue>0</defaultValue>
    <description>se informará con el número total de pretensiones diagnosticadas</description>
    <label>Numero total pretensiones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>