force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_NumeroDelDocumento__c.field-meta.xml
<CustomField>
    <fullName>SAC_NumeroDelDocumento__c</fullName>
    <description>Número del documento del representante proporcionado por la IA</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Número del documento</label>
    <length>9</length>
    <type>Text</type>
</CustomField>