force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_NumeroDelDocumento_OK__c.field-meta.xml
<CustomField>
    <fullName>SAC_NumeroDelDocumento_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check de si el número del documento del representante esta ok</description>
    <label>Numero Del Documento OK</label>
    <type>Checkbox</type>
</CustomField>