force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_NumPerso__c.field-meta.xml
<CustomField>
    <fullName>SAC_NumPerso__c</fullName>
    <description>Campo que se rellenará cuando se detecte en SAC_GenialQueueable que es confidencial, para rellenarlo en caso de que se tenga que crear el dommy confidencial</description>
    <encryptionScheme>None</encryptionScheme>
    <label>NumPerso</label>
    <length>15</length>
    <type>Text</type>
</CustomField>