force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_PaginaDocumento__c.field-meta.xml
<CustomField>
    <fullName>SAC_PaginaDocumento__c</fullName>
    <description>Página del documento</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Página Documento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>