force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_PoblacionContacto__c.field-meta.xml
<CustomField>
    <fullName>SAC_PoblacionContacto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Población reclamante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>