force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_PoblacionRepresentante__c.field-meta.xml
<CustomField>
    <fullName>SAC_PoblacionRepresentante__c</fullName>
    <description>Población del representante proporcionado por la IA</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Población</label>
    <length>255</length>
    <type>Text</type>
</CustomField>