force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_Pretension__c.field-meta.xml
<CustomField>
    <fullName>SAC_Pretension__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>caso de tipo pretensión relacionada</description>
    <label>Pretension</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>SAC_Genial_Resultados (Pretension)</relationshipLabel>
    <relationshipName>SAC_Genial_Resultados1</relationshipName>
    <type>Lookup</type>
</CustomField>