force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_PretensionPrincipal__c.field-meta.xml
<CustomField>
    <fullName>SAC_PretensionPrincipal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo utilizado para indicar la pretensión principal de una reclamación. Utilizado en el proyecto SAC. Generado por IA.</description>
    <label>Pretension Principal</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>SAC_Genial_Resultados (Pretension Principal)</relationshipLabel>
    <relationshipName>SAC_Genial_Resultados2</relationshipName>
    <type>Lookup</type>
</CustomField>