force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_Procesado__c.field-meta.xml
<CustomField>
    <fullName>SAC_Procesado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Informa si el registro ya ha sido usado para realizar la comparativa de datos entre la IA y el gestor.</description>
    <label>Procesado</label>
    <type>Checkbox</type>
</CustomField>