force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_ProvinciaRepresentante__c.field-meta.xml
<CustomField>
    <fullName>SAC_ProvinciaRepresentante__c</fullName>
    <description>Provincia del representante proporcionada por la IA</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Provincia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>