force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_Reclamacion__c.field-meta.xml
<CustomField>
    <fullName>SAC_Reclamacion__c</fullName>
    <description>relacion a la reclamación</description>
    <label>Reclamación</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>SAC_Genial_Resultados</relationshipLabel>
    <relationshipName>SAC_Genial_Resultados</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>