force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_Reclamante_Principal_OK__c.field-meta.xml
<CustomField>
    <fullName>SAC_Reclamante_Principal_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>se informará a SI si el reclamante principal propuesto por la IA es el reclamante principal del caso</description>
    <label>Reclamacion IA Reclamante_Principal_OK</label>
    <type>Checkbox</type>
</CustomField>