force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_ReclamantePrincipal_Null__c.field-meta.xml
<CustomField>
    <fullName>SAC_ReclamantePrincipal_Null__c</fullName>
    <formula>AND(SAC_SuppliedNIF__c==null, SAC_Email__c == null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reclamante Principal Null</label>
    <type>Checkbox</type>
</CustomField>