force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_ReclamantePrincipal_OK__c.field-meta.xml
<CustomField>
    <fullName>SAC_ReclamantePrincipal_OK__c</fullName>
    <formula>OR(AND(SAC_SuppliedNIF__c!=null, SAC_SuppliedNIF_OK__c), AND(SAC_Email__c!=null, SAC_Email_OK__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reclamante Principal OK</label>
    <type>Checkbox</type>
</CustomField>