force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_Representante_Legal_OK__c.field-meta.xml
<CustomField>
    <fullName>SAC_Representante_Legal_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>se informará a SI si el representante legal propuesto por la IA es el representante legal del caso</description>
    <label>Reclamacion IA Representante_Legal_OK</label>
    <type>Checkbox</type>
</CustomField>