force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_SuppliedNIF__c.field-meta.xml
<CustomField>
    <fullName>SAC_SuppliedNIF__c</fullName>
    <description>Servicio web creación casos. Documento de identidad proporcionado. Proporcionado por IA.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>NIF</label>
    <length>20</length>
    <type>Text</type>
</CustomField>