force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_SuppliedNIF_OK__c.field-meta.xml
<CustomField>
    <fullName>SAC_SuppliedNIF_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check de si el documento del reclamante principal esta ok</description>
    <label>NIF OK</label>
    <type>Checkbox</type>
</CustomField>