force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_Telefono_Contacto__c.field-meta.xml
<CustomField>
    <fullName>SAC_Telefono_Contacto__c</fullName>
    <description>Teléfono de contacto del reclamante</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Teléfono reclamante</label>
    <type>Phone</type>
</CustomField>