force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_TipoDeDocumento__c.field-meta.xml
<CustomField>
    <fullName>SAC_TipoDeDocumento__c</fullName>
    <description>Tipo de documento del representante proporcionado por la IA</description>
    <label>Tipo de documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DNI</fullName>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>