force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_UmbralMotivo__c.field-meta.xml
<CustomField>
    <fullName>SAC_UmbralMotivo__c</fullName>
    <label>Umbral Motivo</label>
    <precision>17</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>