force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_UmbralProdServ__c.field-meta.xml
<CustomField>
    <fullName>SAC_UmbralProdServ__c</fullName>
    <label>Umbral Producto/Servicio</label>
    <precision>17</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>