force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_UsarDatos__c.field-meta.xml
<CustomField>
    <fullName>SAC_UsarDatos__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check que nos indica si los datos del reclamante deben ser usados como datos de la reclamación. Proporcionado por la IA</description>
    <label>Usar los datos del reclamante</label>
    <type>Checkbox</type>
</CustomField>