force-app/main/default/objects/SAC_Genial_Resultado__c/fields/SAC_ValoracionResumen__c.field-meta.xml
<CustomField>
    <fullName>SAC_ValoracionResumen__c</fullName>
    <description>Valoración realizada por usuario sobre los resúmenes realizados por la IA. El valor se modifica con un par de botones debajo del resumen, puestos en el LWC de SAC_GenialView a nivel de pretensión.</description>
    <label>Valoración Resumen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neutral</fullName>
                <default>true</default>
                <label>Neutral</label>
            </value>
            <value>
                <fullName>Positivo</fullName>
            </value>
            <value>
                <fullName>Negativo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>