force-app/main/default/objects/SAC_Genial_Resultado__c/recordTypes/SAC_Pretension_IA.recordType-meta.xml
<RecordType>
    <fullName>SAC_Pretension_IA</fullName>
    <active>true</active>
    <description>objeto Case para almacenar los datos de las pretensiones recibidos de la IA tras descomponer el json de entrada</description>
    <label>Pretensión IA</label>
</RecordType>