force-app/main/default/objects/SAC_Genial_Resultado__c/recordTypes/SAC_Reclamacion_IA.recordType-meta.xml
<RecordType>
    <fullName>SAC_Reclamacion_IA</fullName>
    <active>true</active>
    <description>objeto Case para almacenar los datos recibidos de la IA tras descomponer el json de entrada.</description>
    <label>Reclamacion IA</label>
</RecordType>