force-app/main/default/objects/SAC_Genial_Resultado__c/recordTypes/SAC_Reclamante_IA.recordType-meta.xml
<RecordType>
    <fullName>SAC_Reclamante_IA</fullName>
    <active>true</active>
    <description>Reclamantes detectados por la IA relacionados con la reclamación</description>
    <label>Reclamante IA</label>
</RecordType>